hacky fix to spacing

--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -74,11 +74,14 @@ hr {
   font-size: 16px;
   font-weight: 500;
 }
+.expand {
+  margin-left: 4%;
+}
 
 /* media queries */
 @media (min-width: 1366px) and (max-resolution: 1.5dppx) {
   .page-content  {
-    padding-left: 15%;
+    padding-left: 17%;
     padding-right: 15%;
     padding-top: 1.3%;
   }
